Feat:Adding metadata tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/icons/favicon.png" />
+    <meta name="description" content="Experience, skills, proyects and a little more about me."/> 
+    <meta property="og:site_name" content="Personal Portfolio - Juan Carlos Barrios"/> 
+    <meta property="og:title" content="Personal Portfolio - Juan Carlos Barrios"/> 
+    <meta property="og:description" content="Experience, skills, proyects and a little more about me."/> 
+    <meta property="og:image" content="https://media.licdn.com/dms/image/C4E03AQGnqVabawA9SQ/profile-displayphoto-shrink_800_800/0/1654797211167?e=1692230400&v=beta&t=Hh66s0fQFi2Hh8JH92IHrBjeshzHs3MmaOlh9N6sYK4"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Portfolio - Juan Carlos Barrios</title>
   </head>
