fix: portfolio section fix

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:site_name" content="Personal Portfolio - Juan Carlos Barrios"/> 
     <meta property="og:title" content="Personal Portfolio - Juan Carlos Barrios"/> 
     <meta property="og:description" content="Experience, skills, proyects and a little more about me."/> 
-    <meta property="og:image" content="https://media.licdn.com/dms/image/C4E03AQGnqVabawA9SQ/profile-displayphoto-shrink_800_800/0/1654797211167?e=1692230400&v=beta&t=Hh66s0fQFi2Hh8JH92IHrBjeshzHs3MmaOlh9N6sYK4"/>
+    <meta property="og:image" content="https://juanbarriosg.github.io/portfolio/assets/profile-image-4dc99c38.jpg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Portfolio - Juan Carlos Barrios</title>
   </head>
